--- a/App/App.csproj
+++ b/App/App.csproj
@@ -16,4 +16,7 @@
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\ApplicationViewModel\" />
+  </ItemGroup>
 </Project>
